--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ h1 {
     line-height: 1.5;
     font-size: 20pt;
     margin-left: 1.4rem;
-    padding: 10px 10px 20px 10px;
+    padding: 20px 10px 25px 10px;
     margin-bottom: 0;
     display: inline-flex;
 }
@@ -28,6 +28,11 @@ h1 {
 .img {
     padding-right: 10px;
     padding-left: 2px;
+}
+
+.port-img, 
+.absolute {
+    margin: 10px;
 }
 
 h2 {
@@ -38,9 +43,17 @@ h2 {
     font-weight: bolder;
 }
 
+h3 {
+    color: #fff;
+    background: #4aaaa5;
+    padding: 20px 0 20px 0;
+    font-size: 20px;
+    font-family: 'Georgia', Times, 'Times New Roman', serif;
+}
+
 hr {
     background: #ccc;
-    width: 96%;
+    width: 95%;
 }
 
 a {
@@ -66,9 +79,20 @@ footer {
     width: 100%;
 }
 
+.relative {
+    position: relative;
+}
+
+.absolute {
+    position: absolute;
+    top: 190px;
+    width: 100%;
+    text-align: center;
+}
+
 .spn {
-    padding: 20px 0 20px 0;
-    float: right;
+    padding: 20px 10px 20px 10px;
+    text-align: right;
 }
 
 .container {
@@ -77,6 +101,7 @@ footer {
 
 .container-fluid {
     min-height: 70px;
+    width: 100%;
 }
 .nav {
     height: 70px;
@@ -94,39 +119,119 @@ footer {
     margin-left: 2rem !important;
 }
 
-@media screen and (min-width: 980px) {
+@media screen and (max-width: 980px) {
+
     img {
         width: 200px;
     }
-}
-@media screen and (max-width: 980px) {
-    img {
-        width: 200px;
+
+    .port-img, 
+    .relative {
+        width: 300px;
     }
 }
 
+@media screen and (min-width: 980px) {
+
+    img {
+        width: 200px;
+    }
+
+    .port-img, 
+    .relative {
+        width: 300px;
+    }
+
+}
+
 @media screen and (max-width: 768px) {
+
     img {
         width: 400px;
+    }
+
+    .port-img, 
+    .relative {
+        width: 300px;
+    }
+    
+    .absolute {
+        top: 185px;
     }
 }
 
 @media screen and (max-width: 640px) {
-    img {
-        width: 500px;
-    }
  
+    .absolute {
+        top: 355px;
+    }
+
+    img {
+        width: 490px;
+    }
+
+    .port-img, 
+    .relative {
+        width: 490px;
+    }
+
     h1 {
         display: inherit;
-        width: 100%;
-        margin: 0rem;
         text-align: center;
+        padding: 20px 0 25px 0;
+        margin: 0rem;
     }
+
     .spn {
-        float: none;
+        text-align: center;
         padding: 20px;
     }
+
     .container {
         width: 100%;
+        padding-bottom: 10px;
     }
+
+    .container-fluid {
+        width: 100%;
+    }
+    
+    .full {
+        width: 100%;
+        margin-left: 0rem;
+        margin-right: 0rem;
+        padding-left: 0rem;
+        padding-right: 0rem;
+    }
+}
+
+/* form css */
+
+input[type="text"],
+input[type="email"] {
+    width: 97%;
+    height: 25px;
+    border: 1px solid #ccc;
+    padding: 5px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #ccc;
+}
+
+input[type="comment"] {
+    width: 97%;
+    height: 250px;
+    border: 1px solid #ccc;
+    padding: 5px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    color: #ccc;
+}
+
+input[type="submit"] {
+    background: #4aaaa5;
+    color: #fff;
+    border: 0px;
+    padding: 10px;
+    width: 150px;
+    font-size: 14pt;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
